# LearnTrinityCore

./: CMakeLists.txt  README.md  main.cpp
Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseEnvFwd.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLHacks.h  MySQLPreparedStatement.cpp  MySQLPreparedStatement.h  MySQLThreading.cpp  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.cpp  QueryCallback.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
Networking/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
Threading/: ProducerConsumerQueue.h  ThreadPool.h
Utilities/: MessageBuffer.h  Util.cpp  Util.h
test/: MysqlConnectionTest.cpp  ProducerConsumerQueueTest.cpp  ThreadPoolTest.cpp
test/PingPong/: PingPongServer.cpp  PingSocket.h  PingSocketMgr.h
